# R4ffi

./: .gitignore
c-Rffi/: Makefile
c-Rffi/include/: Rffi.h
c-Rffi/test/: CMakeLists.txt  Makefile  cmake_install.cmake  testR2rb  testR2rb.c
extensions/R4js-ffi/: r4ffi.js
extensions/R4js-ffi/package/: package.json
extensions/R4js-ffi/package/lib/: r4ffi.js
extensions/R4js-ffi/package/test/: test_r4ffi
extensions/R4rb-ffi/: Rakefile
extensions/R4rb-ffi/lib/: R4ffi.rb
extensions/R4rb-ffi/lib/R4ffi/: Rffi.rb
extensions/crystal/: r4ffi  r4ffi.cr  testR4ffi.cr
extensions/julia/: R.jl  testR.jl
node-Rffi/: rffi.js
ruby-Rffi/: .Rhistory
ruby-Rffi/lib/: R4rb-ffi.rb  R4rb.rb
ruby-Rffi/lib/R4rb/: rarray.rb.OLD
ruby-Rffi/lib/R4rb-ffi/: Rffi.rb
ruby-Rffi/test/: .RData
sources/: CMakeLists.txt  cmake_install.cmake
sources/include/: Rffi.h
sources/src/: Rffi.c
